Improve main and login page styling

--- a/pkg/ui/chooser/embed/login/login.html
+++ b/pkg/ui/chooser/embed/login/login.html
@@ -1,3 +1,8 @@
-<p>
-    <a href="{{$.authUrl}}">Connect with OIDC</a>
-</p>
+<style>
+    
+</style>
+<a href="{{$.authUrl}}">
+    <button>
+        Connect with OIDC
+    </button>
+</a>
