--- a/pkg/ui/chooser/embed/namespaces/index.html
+++ b/pkg/ui/chooser/embed/namespaces/index.html
@@ -4,13 +4,13 @@
         <a href="#" onclick="window.location = window.location.origin + window.location.pathname + 'mlflow/'">
             <button>Classic</button>
         </a>
-        <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
+        <p class="tight">This is the classic MLFlow UI, albeit fast and responsive.</p>
     </article>
     <article>
         <a href="#" onclick="window.location = window.location.origin + window.location.pathname + 'aim/'">
             <button>Modern</button>
         </a>
-        <p>This is the modern Aim UI, much faster than MLFlow.</p>
+        <p class="tight">This is the modern Aim UI, much faster than MLFlow.</p>
     </article>
 </div>
 <p>Selected namespace:
@@ -19,6 +19,7 @@
     </b>
 </p>
 
+{{ if .Namespaces}}
 <div id="namespaces-list-container">
     <ul id="namespaces-list">
         {{ range .Namespaces }}
@@ -35,6 +36,7 @@
         {{ end }}
     </ul>
 </div>
+{{ end }}
 
 {{ if .IsAdmin }}
 <p>
