*add logout functionality.

--- a/pkg/ui/chooser/embed/namespaces/index.html
+++ b/pkg/ui/chooser/embed/namespaces/index.html
@@ -43,3 +43,7 @@
     <a href="#" onclick="window.location = window.location.origin + '/admin/namespaces/'">Manage namespaces</a>
 </p>
 {{ end }}
+
+<a href="/logout">
+    <button>Logout</button>
+</a>
