*fixing integration test. changes according to the discussion with Juan.

--- a/pkg/ui/chooser/embed/login/login.html
+++ b/pkg/ui/chooser/embed/login/login.html
@@ -1,7 +1,7 @@
 <style>
     
 </style>
-<a href="{{$.authUrl}}">
+<a href="{{$.authUrl}}" id="oidc-connect">
     <button>
         Connect with OIDC
     </button>
