Integrate OIDC login/logout functionality. (#1225)

--- a/pkg/ui/chooser/embed/login/login.html
+++ b/pkg/ui/chooser/embed/login/login.html
@@ -1,3 +1,8 @@
-<p>
-    <button id="oidc-connect">Connect with OIDC</button>
-</p>
+<style>
+    
+</style>
+<a href="{{$.authUrl}}" id="oidc-connect">
+    <button>
+        Connect with OIDC
+    </button>
+</a>
